docs(v2): migrate documentation to Kora 2.0
Rewrites mkdocs/docs/v2/{en,ru}/** from the copied 1.x content into
final-state Kora 2.0 documentation: 71 topic pairs rewritten, 2 pages
removed, 1 orphan promoted into the nav.

Verified against kora-projects/kora @ master (c5c97c6) and the migrated
examples on kora-examples @ migration/2.0 (e088848).

Removed functionality
- Deletes documentation/database-r2dbc.md and database-vertx.md with their
  nav entries in both locales. Neither module exists in 2.0: a search for
  *r2dbc* and *vertx* across the whole framework tree returns nothing, and
  neither appears in settings.gradle. All inbound links were removed first.
  The 1.x docs stay published at /kora-docs/v1/.

Navigation
- guides/observability.md had 27 inbound links per language but no nav entry.
  Rewritten from a fourth near-duplicate into an assembly hub and added as
  Observability -> Overview. The theme has no navigation.indexes, so a
  section cannot itself be a page.
- examples/hello-world.md stays deliberately orphaned; it duplicates
  guides/getting-started.md.

Where the migration guides disagreed with the framework, the source won
- SystemHttpServerConfig overrides port() to 8085; the guide claims it
  inherits 8080.
- Flyway is 13.3.0 in libs.versions.toml, not 13.1.0.
- vertx-common no longer exists at all.
- HttpServerInterceptor's own javadoc still documents processRequest and
  @HttpClient(configPath = ...); the real API is intercept(...) and
  @HttpClient("...").

The synchronous model is narrower than "Kora 2.0 is synchronous" suggests.
It holds for HTTP server/client contracts and JDBC repositories. Cassandra
repositories still return CompletionStage/CompletableFuture, Kafka publishers
still accept Future/CompletionStage/suspend/Deferred, and gRPC Kotlin
coroutine stubs are still injectable. These are documented as such.

Accuracy fixes beyond the version migration
- The DI guide quoted error messages Kora never emits ("Circular dependency
  de