@@ -1,8 +1,11 @@
-﻿---
+---
 search:
   exclude: true
 title: HTTP Server Advanced Guide
 summary: Extend the basic Kora HTTP server with request context mapping, additional body formats, controller interceptors, consistent error responses, and simple API-key authorization
+description: "Advanced Kora HTTP server topics: HttpServerRequestMapper with @Mapping for typed request context, FormUrlEncoded and FormMultipart bodies, controller interceptors with @InterceptWith, global interceptors tagged @Tag(HttpServer.class), a shared JSON error contract built on JsonWriter.toByteArray, API-key authorization from @ConfigSource, the generated controller module, imperative HttpServerRequestHandlerImpl routes and parallel work inside a synchronous handler."
+agent:
+  use_when: "Use this file for questions about advanced Kora HTTP server work: HttpServerRequestMapper and @Mapping, FormUrlEncoded and FormMultipart request bodies, @InterceptWith controller and method interceptors, global interceptors registered with @Tag(HttpServer.class), HttpServerInterceptor.InterceptChain.process, turning exceptions into a shared JSON ErrorResponse, API-key checks from @ConfigSource, reading the generated *ControllerModule sources, imperative HttpServerRequestHandlerImpl handlers, and why suspend or CompletionStage controller methods are rejected."
 tags: http-server, advanced, interceptors, request-mapping, auth, forms
 ---
 
@@ -18,7 +21,7 @@ application logic to know about low-level request handling.
 
 === ":simple-kotlin: `Kotlin`"
 
-    If you want to check your progress along the way, use the finished working example: [Kora Kotlin HTTP Server Advanced App](https://github.com/kora-projects/kora-examples/tree/master/guides/kotlin/kora-kotlin-http-server-advanced-app).
+    If you want to check your progress along the way, use the finished working example: [Kora Kotlin HTTP Server Advanced App](https://github.com/kora-projects/kora-examples/tree/master/guides/kotlin/kora-kotlin-guide-http-server-advanced-app).
 
 ## What You'll Build { #youll-build }
 
@@ -33,8 +36,8 @@ You will extend the server with:
 
 ## What You'll Need { #youll-need }
 
-- JDK 17 or later
-- Gradle 7+
+- JDK 25 or later
+- Gradle 9+
 - A text editor or IDE
 - Completed [HTTP Server Guide](http-server.md)
 
@@ -71,6 +74,9 @@ This guide expands request handling with:
 Some behavior should apply around routes instead of inside every method body. Interceptors are the HTTP-server tool for that. They can observe or modify request handling before and after a controller
 method runs. That makes them suitable for logging, lightweight authorization, request enrichment, or other transport-level policies.
 
+Because request handling is synchronous, an interceptor is an ordinary method call around the rest of the chain: it calls `chain.process(request)`, gets an `HttpServerResponse` back, and can wrap the
+call in `try/catch/finally`. There is no callback, no `CompletionStage`, and no `suspend` function in the contract.
+
 The important boundary is that interceptors should stay focused on HTTP concerns. They should not become a hidden service layer.
 
 ### Error and Authorization Boundaries { #error-authorization-boundaries }
@@ -101,24 +107,30 @@ Sometimes a route needs more than a JSON body or a path variable. It may also ne
 
 You could pass all of those values as separate method parameters, but once they conceptually belong together, a typed object is easier to read and easier to evolve later.
 
-That is what `HttpServerRequestMapper<T>` is for. It lets you derive one typed parameter from the raw HTTP request.
+That is what `HttpServerRequestMapper<T>` is for. It lets you derive one typed parameter from the raw HTTP request. The interface lives in `io.koraframework.http.server.common.request` and has a
+single synchronous method, `T apply(HttpServerRequest request)`.
+
+A mapper referenced from `@Mapping` is **not** created by the generated controller module — it is requested from the dependency graph. That is why the mapper class carries `@Component` even though it
+has no constructor dependencies of its own.
 
 Create the `RequestContextMapper`:
 
 ===! ":fontawesome-brands-java: `Java`"
 
-    Add these nested types inside `UserController.java`:
+    Add these nested types inside `UserController.java`, together with the imports for `org.jspecify.annotations.Nullable`, `io.koraframework.http.common.cookie.Cookie`,
+    `io.koraframework.http.server.common.request.HttpServerRequest` and `io.koraframework.http.server.common.request.HttpServerRequestMapper`:
 
     ```java
-    public record RequestContext(String requestId, String userAgent, String sessionId) {}
+    public record RequestContext(@Nullable String requestId, @Nullable String userAgent, @Nullable String sessionId) {}
 
+    @Component
     public static final class RequestContextMapper implements HttpServerRequestMapper<RequestContext> {
 
         @Override
         public RequestContext apply(HttpServerRequest request) {
             String sessionId = request.cookies().stream()
                     .filter(cookie -> "sessionId".equals(cookie.name()))
-                    .map(cookie -> cookie.value())
+                    .map(Cookie::value)
                     .findFirst()
                     .orElse(null);
 
@@ -132,7 +144,8 @@ Create the `RequestContextMapper`:
 
 === ":simple-kotlin: `Kotlin`"
 
-    Add the same idea in `UserController.kt`:
+    Add the same idea in `UserController.kt`, together with the imports for `io.koraframework.http.server.common.request.HttpServerRequest` and
+    `io.koraframework.http.server.common.request.HttpServerRequestMapper`:
 
     ```kotlin
     data class RequestContext(
@@ -141,6 +154,7 @@ Create the `RequestContextMapper`:
         val sessionId: String?
     )
 
+    @Component
     class RequestContextMapper : HttpServerRequestMapper<RequestContext> {
         override fun apply(request: HttpServerRequest): RequestContext {
             val sessionId = request.cookies()
@@ -197,10 +211,13 @@ Use it on `createUser()`:
 Why this abstraction is useful:
 
 - `HttpServerRequestMapper<T>` lets you create any typed object from the request
-- `@Mapping(...)` tells Kora to use that mapper for one specific parameter
+- `@Mapping(...)` from `io.koraframework.common.annotation` tells Kora to use that mapper for one specific parameter
 - the route signature stays compact even when the route needs several request-derived values
 
 This is often a better fit than endlessly growing controller method signatures.
+
+An exception thrown by a mapper is turned into a `400` response unless the exception is itself an `HttpServerResponse`, so a mapper is also a convenient place to reject a malformed request with an
+exact status code.
 
 ## New Controller { #new-controller }
 
@@ -230,6 +247,8 @@ Even in JSON-first systems, these formats still appear often:
 - upload endpoints
 - webhook providers
 
+Both `FormUrlEncoded` and `FormMultipart` live in `io.koraframework.http.common.form`, and Kora already provides the request mappers for them, so a controller method only has to declare the parameter.
+
 DataController helps because we keep these routes out of `UserController` on purpose:
 
 - `UserController` stays focused on user CRUD
@@ -241,20 +260,20 @@ Create `DataController`:
 
 ===! ":fontawesome-brands-java: `Java`"
 
-    ```java title="src/main/java/ru/tinkoff/kora/guide/httpserver/advanced/controller/DataController.java"
-    package ru.tinkoff.kora.guide.httpserver.advanced.controller;
+    ```java title="src/main/java/io/koraframework/guide/httpserver/advanced/controller/DataController.java"
+    package io.koraframework.guide.httpserver.advanced.controller;
 
     import java.util.List;
     import java.util.stream.Collectors;
-    import ru.tinkoff.kora.common.Component;
-    import ru.tinkoff.kora.http.common.HttpMethod;
-    import ru.tinkoff.kora.http.common.annotation.HttpRoute;
-    import ru.tinkoff.kora.http.common.annotation.Path;
-    import ru.tinkoff.kora.http.common.form.FormMultipart;
-    import ru.tinkoff.kora.http.common.form.FormUrlEncoded;
-    import ru.tinkoff.kora.http.server.common.HttpServerResponseException;
-    import ru.tinkoff.kora.http.server.common.annotation.HttpController;
-    import ru.tinkoff.kora.json.common.annotation.Json;
+    import io.koraframework.common.annotation.Component;
+    import io.koraframework.http.common.HttpMethod;
+    import io.koraframework.http.common.annotation.HttpRoute;
+    import io.koraframework.http.common.annotation.Path;
+    import io.koraframework.http.common.form.FormMultipart;
+    import io.koraframework.http.common.form.FormUrlEncoded;
+    import io.koraframework.http.server.common.annotation.HttpController;
+    import io.koraframework.http.server.common.response.HttpServerResponseException;
+    import io.koraframework.json.common.annotation.Json;
 
     @Component
     @HttpController
@@ -301,18 +320,18 @@ Create `DataController`:
 
 === ":simple-kotlin: `Kotlin`"
 
-    ```kotlin title="src/main/kotlin/ru/tinkoff/kora/guide/httpserver/advanced/controller/DataController.kt"
-    package ru.tinkoff.kora.guide.httpserver.advanced.controller
+    ```kotlin title="src/main/kotlin/io/koraframework/guide/httpserver/advanced/controller/DataController.kt"
+    package io.koraframework.guide.httpserver.advanced.controller
 
-    import ru.tinkoff.kora.common.Component
-    import ru.tinkoff.kora.http.common.HttpMethod
-    import ru.tinkoff.kora.http.common.annotation.HttpRoute
-    import ru.tinkoff.kora.http.common.annotation.Path
-    import ru.tinkoff.kora.http.common.form.FormMultipart
-    import ru.tinkoff.kora.http.common.form.FormUrlEncoded
-    import ru.tinkoff.kora.http.server.common.HttpServerResponseException
-    import ru.tinkoff.kora.http.server.common.annotation.HttpController
-    import ru.tinkoff.kora.json.common.annotation.Json
+    import io.koraframework.common.annotation.Component
+    import io.koraframework.http.common.HttpMethod
+    import io.koraframework.http.common.annotation.HttpRoute
+    import io.koraframework.http.common.annotation.Path
+    import io.koraframework.http.common.form.FormMultipart
+    import io.koraframework.http.common.form.FormUrlEncoded
+    import io.koraframework.http.server.common.annotation.HttpController
+    import io.koraframework.http.server.common.response.HttpServerResponseException
+    import io.koraframework.json.common.annotation.Json
 
     @Component
     @HttpController
@@ -353,6 +372,9 @@ Create `DataController`:
     data class UploadResponse(val fileCount: Int, val fileNames: List<String>)
     ```
 
+`FormUrlEncoded.get(name)` returns a nullable `FormPart` with a list of values, and `FormMultipart.parts()` returns a sealed `FormPart` hierarchy where a part is either data, a file, or a file
+stream — that is why the upload route only reads `name()` here.
+
 The helper routes at the bottom are intentionally tiny. They exist so the next guide, [HTTP Client Advanced Guide](http-client-advanced.md), can demonstrate:
 
 - custom request mapping on `POST /data/mapping-request`
@@ -383,61 +405,69 @@ Create `LoggingInterceptor`:
 
 ===! ":fontawesome-brands-java: `Java`"
 
-    ```java title="src/main/java/ru/tinkoff/kora/guide/httpserver/advanced/controller/LoggingInterceptor.java"
-    package ru.tinkoff.kora.guide.httpserver.advanced.controller;
+    ```java title="src/main/java/io/koraframework/guide/httpserver/advanced/controller/LoggingInterceptor.java"
+    package io.koraframework.guide.httpserver.advanced.controller;
 
-    import java.util.concurrent.CompletionStage;
-    import ru.tinkoff.kora.common.Component;
-    import ru.tinkoff.kora.common.Context;
-    import ru.tinkoff.kora.http.server.common.HttpServerInterceptor;
-    import ru.tinkoff.kora.http.server.common.HttpServerRequest;
-    import ru.tinkoff.kora.http.server.common.HttpServerResponse;
+    import io.koraframework.common.annotation.Component;
+    import io.koraframework.http.server.common.interceptor.HttpServerInterceptor;
+    import io.koraframework.http.server.common.request.HttpServerRequest;
+    import io.koraframework.http.server.common.response.HttpServerResponse;
 
     @Component
     public final class LoggingInterceptor implements HttpServerInterceptor {
 
         @Override
-        public CompletionStage<HttpServerResponse> intercept(Context context, HttpServerRequest request, InterceptChain chain)
-                throws Exception {
+        public HttpServerResponse intercept(HttpServerRequest request, InterceptChain chain) throws Exception {
             long started = System.nanoTime();
-            return chain.process(context, request).whenComplete((response, throwable) -> {
+            int statusCode = 500;
+            try {
+                var response = chain.process(request);
+                statusCode = response.code();
+                return response;
+            } finally {
                 long durationMs = (System.nanoTime() - started) / 1_000_000;
-                int statusCode = response != null ? response.code() : 500;
                 System.out.printf("Request: %s %s -> %d (%d ms)%n", request.method(), request.path(), statusCode, durationMs);
-            });
+            }
         }
     }
     ```
 
 === ":simple-kotlin: `Kotlin`"
 
-    ```kotlin title="src/main/kotlin/ru/tinkoff/kora/guide/httpserver/advanced/controller/LoggingInterceptor.kt"
-    package ru.tinkoff.kora.guide.httpserver.advanced.controller
+    ```kotlin title="src/main/kotlin/io/koraframework/guide/httpserver/advanced/controller/LoggingInterceptor.kt"
+    package io.koraframework.guide.httpserver.advanced.controller
 
-    import java.util.concurrent.CompletionStage
-    import ru.tinkoff.kora.common.Component
-    import ru.tinkoff.kora.common.Context
-    import ru.tinkoff.kora.http.server.common.HttpServerInterceptor
-    import ru.tinkoff.kora.http.server.common.HttpServerRequest
-    import ru.tinkoff.kora.http.server.common.HttpServerResponse
+    import io.koraframework.common.annotation.Component
+    import io.koraframework.http.server.common.interceptor.HttpServerInterceptor
+    import io.koraframework.http.server.common.request.HttpServerRequest
+    import io.koraframework.http.server.common.response.HttpServerResponse
 
     @Component
     class LoggingInterceptor : HttpServerInterceptor {
 
-        override fun intercept(
-            context: Context,
-            request: HttpServerRequest,
-            chain: HttpServerInterceptor.InterceptChain
-        ): CompletionStage<HttpServerResponse> {
+        override fun intercept(request: HttpServerRequest, chain: HttpServerInterceptor.InterceptChain): HttpServerResponse {
             val started = System.nanoTime()
-            return chain.process(context, request).whenComplete { response, _ ->
+            var statusCode = 500
+            try {
+                val response = chain.process(request)
+                statusCode = response.code()
+                return response
+            } finally {
                 val durationMs = (System.nanoTime() - started) / 1_000_000
-                val statusCode = response?.code() ?: 500
-                println("Request: ${request.method()} ${request.path()} -> $statusCode (${durationMs} ms)")
+                println("Request: ${request.method()} ${request.path()} -> $statusCode ($durationMs ms)")
             }
         }
     }
     ```
+
+The interceptor contract is one synchronous method:
+
+- `intercept(request, chain)` receives the incoming request and the rest of the chain
+- `chain.process(request)` runs the remaining interceptors and the controller method and returns the response
+- returning without calling `chain.process(...)` short-circuits the route
+- an exception raised deeper in the chain simply propagates, so `try/finally` is enough to always log a line
+
+The initial `statusCode = 500` is what gets logged when the chain throws: `chain.process(request)` never returns a value in that case, and the `finally` block still runs.
 
 Apply it only to `UserController`:
 
@@ -465,6 +495,9 @@ Apply it only to `UserController`:
     }
     ```
 
+`@InterceptWith` comes from `io.koraframework.http.common.annotation`. It is repeatable and can be placed on the controller class or on a single route method; interceptors declared on the class run
+before those declared on the method. Like `@Mapping`, it references a class that Kora resolves from the graph, so `LoggingInterceptor` must be a `@Component`.
+
 This is a good example of why controller-scoped interceptors are useful:
 
 - they keep the behavior reusable
@@ -489,10 +522,10 @@ Create `ErrorResponse`:
 
 ===! ":fontawesome-brands-java: `Java`"
 
-    ```java title="src/main/java/ru/tinkoff/kora/guide/httpserver/advanced/dto/ErrorResponse.java"
-    package ru.tinkoff.kora.guide.httpserver.advanced.dto;
+    ```java title="src/main/java/io/koraframework/guide/httpserver/advanced/dto/ErrorResponse.java"
+    package io.koraframework.guide.httpserver.advanced.dto;
 
-    import ru.tinkoff.kora.json.common.annotation.Json;
+    import io.koraframework.json.common.annotation.Json;
 
     @Json
     public record ErrorResponse(String message) {}
@@ -500,10 +533,10 @@ Create `ErrorResponse`:
 
 === ":simple-kotlin: `Kotlin`"
 
-    ```kotlin title="src/main/kotlin/ru/tinkoff/kora/guide/httpserver/advanced/dto/ErrorResponse.kt"
-    package ru.tinkoff.kora.guide.httpserver.advanced.dto
+    ```kotlin title="src/main/kotlin/io/koraframework/guide/httpserver/advanced/dto/ErrorResponse.kt"
+    package io.koraframework.guide.httpserver.advanced.dto
 
-    import ru.tinkoff.kora.json.common.annotation.Json
+    import io.koraframework.json.common.annotation.Json
 
     @Json
     data class ErrorResponse(
@@ -515,8 +548,8 @@ Create a small exception for a deliberately restricted form name:
 
 ===! ":fontawesome-brands-java: `Java`"
 
-    ```java title="src/main/java/ru/tinkoff/kora/guide/httpserver/advanced/controller/RestrictedFormNameException.java"
-    package ru.tinkoff.kora.guide.httpserver.advanced.controller;
+    ```java title="src/main/java/io/koraframework/guide/httpserver/advanced/controller/RestrictedFormNameException.java"
+    package io.koraframework.guide.httpserver.advanced.controller;
 
     public final class RestrictedFormNameException extends RuntimeException {
 
@@ -528,11 +561,10 @@ Create a small exception for a deliberately restricted form name:
 
 === ":simple-kotlin: `Kotlin`"
 
-    ```kotlin title="src/main/kotlin/ru/tinkoff/kora/guide/httpserver/advanced/controller/RestrictedFormNameException.kt"
-    package ru.tinkoff.kora.guide.httpserver.advanced.controller
+    ```kotlin title="src/main/kotlin/io/koraframework/guide/httpserver/advanced/controller/RestrictedFormNameException.kt"
+    package io.koraframework.guide.httpserver.advanced.controller
 
-    class RestrictedFormNameException(name: String) :
-        RuntimeException("Form name '$name' is restricted")
+    class RestrictedFormNameException(name: String) : RuntimeException("Form name '$name' is restricted")
     ```
 
 Now update the form route so the new exception has a concrete source:
@@ -566,31 +598,29 @@ Now update the form route so the new exception has a concrete source:
 
 Create the global `ExceptionHandler`:
 
-Kora lets us apply an interceptor to the whole HTTP server by tagging it with `HttpServerModule`. That is what makes this interceptor global rather than controller-local.
+Kora collects global interceptors by the `@Tag(HttpServer.class)` tag: `HttpServerModule` declares the router dependency as `@Tag(HttpServer.class) All<HttpServerInterceptor> interceptors`. That tag,
+and only that tag, is what makes this interceptor global rather than controller-local. `HttpServer` is imported from `io.koraframework.http.server.common`.
 
-The interceptor depends on `JsonWriter<ErrorResponse>`, so it can always serialize the same typed error body instead of building ad-hoc strings by hand. That keeps the error transport contract
-explicit and consistent.
+Because handling is synchronous, the handler is a plain `try/catch` around `chain.process(request)`. The interceptor depends on `JsonWriter<ErrorResponse>`, so it can always serialize the same typed
+error body instead of building ad-hoc strings by hand. That constructor dependency is also the reason this class must be a graph component.
 
 ===! ":fontawesome-brands-java: `Java`"
 
-    ```java title="src/main/java/ru/tinkoff/kora/guide/httpserver/advanced/controller/ExceptionHandler.java"
-    package ru.tinkoff.kora.guide.httpserver.advanced.controller;
+    ```java title="src/main/java/io/koraframework/guide/httpserver/advanced/controller/ExceptionHandler.java"
+    package io.koraframework.guide.httpserver.advanced.controller;
 
-    import java.util.concurrent.CompletionException;
-    import java.util.concurrent.CompletionStage;
-    import ru.tinkoff.kora.common.Component;
-    import ru.tinkoff.kora.common.Context;
-    import ru.tinkoff.kora.common.Tag;
-    import ru.tinkoff.kora.guide.httpserver.advanced.dto.ErrorResponse;
-    import ru.tinkoff.kora.http.common.body.HttpBody;
-    import ru.tinkoff.kora.http.server.common.HttpServerInterceptor;
-    import ru.tinkoff.kora.http.server.common.HttpServerModule;
-    import ru.tinkoff.kora.http.server.common.HttpServerRequest;
-    import ru.tinkoff.kora.http.server.common.HttpServerResponse;
-    import ru.tinkoff.kora.http.server.common.HttpServerResponseException;
-    import ru.tinkoff.kora.json.common.JsonWriter;
+    import io.koraframework.common.annotation.Component;
+    import io.koraframework.common.annotation.Tag;
+    import io.koraframework.guide.httpserver.advanced.dto.ErrorResponse;
+    import io.koraframework.http.common.body.HttpBody;
+    import io.koraframework.http.server.common.HttpServer;
+    import io.koraframework.http.server.common.interceptor.HttpServerInterceptor;
+    import io.koraframework.http.server.common.request.HttpServerRequest;
+    import io.koraframework.http.server.common.response.HttpServerResponse;
+    import io.koraframework.http.server.common.response.HttpServerResponseException;
+    import io.koraframework.json.common.JsonWriter;
 
-    @Tag(HttpServerModule.class)
+    @Tag(HttpServer.class)
     @Component
     public final class ExceptionHandler implements HttpServerInterceptor {
 
@@ -601,95 +631,82 @@ explicit and consistent.
         }
 
         @Override
-        public CompletionStage<HttpServerResponse> intercept(Context context, HttpServerRequest request, InterceptChain chain)
-                throws Exception {
-            return chain.process(context, request).exceptionally(throwable -> {
-                Throwable cause = unwrap(throwable);
-                if (cause instanceof RestrictedFormNameException restrictedFormNameException) {
-                    return jsonResponse(400, restrictedFormNameException.getMessage());
-                }
-                if (cause instanceof HttpServerResponseException responseException) {
-                    return jsonResponse(responseException.code(), responseException.getMessage());
-                }
-                if (cause instanceof IllegalArgumentException) {
-                    return jsonResponse(400, "Invalid request parameters");
-                }
-                if (cause instanceof SecurityException) {
-                    return jsonResponse(403, cause.getMessage() != null ? cause.getMessage() : "Access denied");
-                }
+        public HttpServerResponse intercept(HttpServerRequest request, InterceptChain chain) {
+            try {
+                return chain.process(request);
+            } catch (RestrictedFormNameException e) {
+                return jsonResponse(400, e.getMessage());
+            } catch (HttpServerResponseException e) {
+                return jsonResponse(e.code(), e.getMessage());
+            } catch (IllegalArgumentException e) {
+                return jsonResponse(400, "Invalid request parameters");
+            } catch (SecurityException e) {
+                return jsonResponse(403, e.getMessage() != null ? e.getMessage() : "Access denied");
+            } catch (Exception e) {
                 return jsonResponse(500, "An unexpected error occurred");
-            });
+            }
         }
 
         private HttpServerResponse jsonResponse(int statusCode, String message) {
-            return HttpServerResponse.of(statusCode, HttpBody.json(this.errorJsonWriter.toByteArrayUnchecked(new ErrorResponse(message))));
-        }
-
-        private static Throwable unwrap(Throwable throwable) {
-            Throwable current = throwable;
-            while (current instanceof CompletionException && current.getCause() != null) {
-                current = current.getCause();
-            }
-            return current;
+            return HttpServerResponse.of(statusCode, HttpBody.json(this.errorJsonWriter.toByteArray(new ErrorResponse(message))));
         }
     }
     ```
 
 === ":simple-kotlin: `Kotlin`"
 
-    ```kotlin title="src/main/kotlin/ru/tinkoff/kora/guide/httpserver/advanced/controller/ExceptionHandler.kt"
-    package ru.tinkoff.kora.guide.httpserver.advanced.controller
+    ```kotlin title="src/main/kotlin/io/koraframework/guide/httpserver/advanced/controller/ExceptionHandler.kt"
+    package io.koraframework.guide.httpserver.advanced.controller
 
-    import java.util.concurrent.CompletionException
-    import java.util.concurrent.CompletionStage
-    import ru.tinkoff.kora.common.Component
-    import ru.tinkoff.kora.common.Context
-    import ru.tinkoff.kora.common.Tag
-    import ru.tinkoff.kora.guide.httpserver.advanced.dto.ErrorResponse
-    import ru.tinkoff.kora.http.common.body.HttpBody
-    import ru.tinkoff.kora.http.server.common.HttpServerInterceptor
-    import ru.tinkoff.kora.http.server.common.HttpServerModule
-    import ru.tinkoff.kora.http.server.common.HttpServerRequest
-    import ru.tinkoff.kora.http.server.common.HttpServerResponse
-    import ru.tinkoff.kora.http.server.common.HttpServerResponseException
-    import ru.tinkoff.kora.json.common.JsonWriter
+    import io.koraframework.common.annotation.Component
+    import io.koraframework.common.annotation.Tag
+    import io.koraframework.guide.httpserver.advanced.dto.ErrorResponse
+    import io.koraframework.http.common.body.HttpBody
+    import io.koraframework.http.server.common.HttpServer
+    import io.koraframework.http.server.common.interceptor.HttpServerInterceptor
+    import io.koraframework.http.server.common.request.HttpServerRequest
+    import io.koraframework.http.server.common.response.HttpServerResponse
+    import io.koraframework.http.server.common.response.HttpServerResponseException
+    import io.koraframework.json.common.JsonWriter
 
-    @Tag(HttpServerModule::class)
+    @Tag(HttpServer::class)
     @Component
     class ExceptionHandler(
         private val errorJsonWriter: JsonWriter<ErrorResponse>
     ) : HttpServerInterceptor {
 
-        override fun intercept(
-            context: Context,
-            request: HttpServerRequest,
-            chain: HttpServerInterceptor.InterceptChain
-        ): CompletionStage<HttpServerResponse> {
-            return chain.process(context, request).exceptionally { throwable ->
-                val cause = unwrap(throwable)
-                when (cause) {
-                    is RestrictedFormNameException -> jsonResponse(400, cause.message ?: "Restricted form name")
-                    is HttpServerResponseException -> jsonResponse(cause.code(), cause.message ?: "HTTP error")
-                    is IllegalArgumentException -> jsonResponse(400, "Invalid request parameters")
-                    is SecurityException -> jsonResponse(403, cause.message ?: "Access denied")
-                    else -> jsonResponse(500, "An unexpected error occurred")
-                }
+        override fun intercept(request: HttpServerRequest, chain: HttpServerInterceptor.InterceptChain): HttpServerResponse {
+            return try {
+                chain.process(request)
+            } catch (e: RestrictedFormNameException) {
+                jsonResponse(400, e.message ?: "Restricted form name")
+            } catch (e: HttpServerResponseException) {
+                jsonResponse(e.code(), e.message ?: "HTTP error")
+            } catch (e: IllegalArgumentException) {
+                jsonResponse(400, "Invalid request parameters")
+            } catch (e: SecurityException) {
+                jsonResponse(403, e.message ?: "Access denied")
+            } catch (e: Exception) {
+                jsonResponse(500, "An unexpected error occurred")
             }
         }
 
         private fun jsonResponse(statusCode: Int, message: String): HttpServerResponse {
-            return HttpServerResponse.of(statusCode, HttpBody.json(errorJsonWriter.toByteArrayUnchecked(ErrorResponse(message))))
-        }
-
-        private fun unwrap(throwable: Throwable): Throwable {
-            var current = throwable
-            while (current is CompletionException && current.cause != null) {
-                current = current.cause!!
-            }
-            return current
+            return HttpServerResponse.of(
+                statusCode,
+                HttpBody.json(errorJsonWriter.toByteArray(ErrorResponse(message)))
+            )
         }
     }
     ```
+
+`JsonWriter.toByteArray(...)` declares no checked exception, so the handler needs no extra `IOException` branch around serialization.
+
+???+ warning "The tag is what makes it global"
+
+    Only `@Tag(HttpServer.class)` / `@Tag(HttpServer::class)` registers a global interceptor for the public server. Any other tag still compiles, and the interceptor is simply never invoked, so the
+    error contract silently disappears. To intercept every request of the **system** server instead, use the `@SystemApi` tag. When several global interceptors exist, they are applied in a
+    deterministic order sorted by the interceptor class simple name.
 
 Keep the regular user lookup local to `UserController`:
 
@@ -700,7 +717,7 @@ Keep the regular user lookup local to `UserController`:
     @Json
     public UserResponse getUser(@Path String userId) {
         return userService.getUser(userId)
-                .orElseThrow(() -> HttpServerResponseException.of(404, "User not found"));
+                .orElseThrow(() -> HttpServerResponseException.of(404, "User not found: " + userId));
     }
     ```
 
@@ -709,10 +726,8 @@ Keep the regular user lookup local to `UserController`:
     ```kotlin
     @HttpRoute(method = HttpMethod.GET, path = "/users/{userId}")
     @Json
-    fun getUser(@Path userId: String): UserResponse {
-        return userService.getUser(userId)
-            .orElseThrow { HttpServerResponseException.of(404, "User not found") }
-    }
+    fun getUser(@Path userId: String): UserResponse =
+        userService.getUser(userId) ?: throw HttpServerResponseException.of(404, "User not found: $userId")
     ```
 
 This is a useful separation:
@@ -721,6 +736,9 @@ This is a useful separation:
 - regular HTTP status failures can still use `HttpServerResponseException`
 - one interceptor translates both forms into the same response shape
 - the whole API now returns the same `ErrorResponse` shape
+
+The global interceptor also wraps the `404` and `405` responses produced by the router itself, and parameter parsing failures, which Kora answers with `400` before the controller method runs. That is
+what makes it a real error contract instead of a per-controller convenience.
 
 ## API Key Authorization { #api-key }
 
@@ -738,29 +756,31 @@ The idea is intentionally simple:
 - if the value does not match, the interceptor throws `SecurityException`
 - the global `ExceptionHandler` turns that into a `403` JSON response
 
-This is not meant to be enterprise-grade authentication. It is a lightweight teaching example that shows how Kora interceptors and configuration can work together for authorization-like checks.
+This is not meant to be enterprise-grade authentication. It is a lightweight teaching example that shows how Kora interceptors and configuration can work together for authorization-like checks. For
+`Principal`-based authorization built on `HttpServerPrincipalExtractor`, see [HTTP Server authorization](../documentation/http-server.md#authorization).
 
 Create the `DataApiAuthConfig` contract:
 
 ===! ":fontawesome-brands-java: `Java`"
 
-    ```java title="src/main/java/ru/tinkoff/kora/guide/httpserver/advanced/controller/DataApiAuthConfig.java"
-    package ru.tinkoff.kora.guide.httpserver.advanced.controller;
+    ```java title="src/main/java/io/koraframework/guide/httpserver/advanced/controller/DataApiAuthConfig.java"
+    package io.koraframework.guide.httpserver.advanced.controller;
 
-    import ru.tinkoff.kora.config.common.annotation.ConfigSource;
+    import io.koraframework.config.common.annotation.ConfigSource;
 
     @ConfigSource("auth.apiKey")
     public interface DataApiAuthConfig {
+
         String value();
     }
     ```
 
 === ":simple-kotlin: `Kotlin`"
 
-    ```kotlin title="src/main/kotlin/ru/tinkoff/kora/guide/httpserver/advanced/controller/DataApiAuthConfig.kt"
-    package ru.tinkoff.kora.guide.httpserver.advanced.controller
+    ```kotlin title="src/main/kotlin/io/koraframework/guide/httpserver/advanced/controller/DataApiAuthConfig.kt"
+    package io.koraframework.guide.httpserver.advanced.controller
 
-    import ru.tinkoff.kora.config.common.annotation.ConfigSource
+    import io.koraframework.config.common.annotation.ConfigSource
 
     @ConfigSource("auth.apiKey")
     interface DataApiAuthConfig {
@@ -772,15 +792,13 @@ Create the `DataApiAuthInterceptor`:
 
 ===! ":fontawesome-brands-java: `Java`"
 
-    ```java title="src/main/java/ru/tinkoff/kora/guide/httpserver/advanced/controller/DataApiAuthInterceptor.java"
-    package ru.tinkoff.kora.guide.httpserver.advanced.controller;
+    ```java title="src/main/java/io/koraframework/guide/httpserver/advanced/controller/DataApiAuthInterceptor.java"
+    package io.koraframework.guide.httpserver.advanced.controller;
 
-    import java.util.concurrent.CompletionStage;
-    import ru.tinkoff.kora.common.Component;
-    import ru.tinkoff.kora.common.Context;
-    import ru.tinkoff.kora.http.server.common.HttpServerInterceptor;
-    import ru.tinkoff.kora.http.server.common.HttpServerRequest;
-    import ru.tinkoff.kora.http.server.common.HttpServerResponse;
+    import io.koraframework.common.annotation.Component;
+    import io.koraframework.http.server.common.interceptor.HttpServerInterceptor;
+    import io.koraframework.http.server.common.request.HttpServerRequest;
+    import io.koraframework.http.server.common.response.HttpServerResponse;
 
     @Component
     public final class DataApiAuthInterceptor implements HttpServerInterceptor {
@@ -792,47 +810,42 @@ Create the `DataApiAuthInterceptor`:
         }
 
         @Override
-        public CompletionStage<HttpServerResponse> intercept(Context context, HttpServerRequest request, InterceptChain chain)
-                throws Exception {
+        public HttpServerResponse intercept(HttpServerRequest request, InterceptChain chain) throws Exception {
             var authorization = request.headers().getFirst("authorization");
             if (!this.config.value().equals(authorization)) {
                 throw new SecurityException("Invalid API key");
             }
-            return chain.process(context, request);
+            return chain.process(request);
         }
     }
     ```
 
 === ":simple-kotlin: `Kotlin`"
 
-    ```kotlin title="src/main/kotlin/ru/tinkoff/kora/guide/httpserver/advanced/controller/DataApiAuthInterceptor.kt"
-    package ru.tinkoff.kora.guide.httpserver.advanced.controller
+    ```kotlin title="src/main/kotlin/io/koraframework/guide/httpserver/advanced/controller/DataApiAuthInterceptor.kt"
+    package io.koraframework.guide.httpserver.advanced.controller
 
-    import java.util.concurrent.CompletionStage
-    import ru.tinkoff.kora.common.Component
-    import ru.tinkoff.kora.common.Context
-    import ru.tinkoff.kora.http.server.common.HttpServerInterceptor
-    import ru.tinkoff.kora.http.server.common.HttpServerRequest
-    import ru.tinkoff.kora.http.server.common.HttpServerResponse
+    import io.koraframework.common.annotation.Component
+    import io.koraframework.http.server.common.interceptor.HttpServerInterceptor
+    import io.koraframework.http.server.common.request.HttpServerRequest
+    import io.koraframework.http.server.common.response.HttpServerResponse
 
     @Component
     class DataApiAuthInterceptor(
         private val config: DataApiAuthConfig
     ) : HttpServerInterceptor {
 
-        override fun intercept(
-            context: Context,
-            request: HttpServerRequest,
-            chain: HttpServerInterceptor.InterceptChain
-        ): CompletionStage<HttpServerResponse> {
+        override fun intercept(request: HttpServerRequest, chain: HttpServerInterceptor.InterceptChain): HttpServerResponse {
             val authorization = request.headers().getFirst("authorization")
             if (config.value() != authorization) {
                 throw SecurityException("Invalid API key")
             }
-            return chain.process(context, request)
+            return chain.process(request)
         }
     }
     ```
+
+Header names are matched case-insensitively by `HttpHeaders`, so `"authorization"` also matches an `Authorization:` header sent by a client.
 
 Apply it to `DataController`:
 
@@ -860,7 +873,7 @@ Apply it to `DataController`:
 
 Configure the API key:
 
-Add the authorization value to `application.conf`:
+Add the authorization value to `application.conf`.
 
 For the full configuration reference, see [Configuration](../documentation/config.md).
 
@@ -875,20 +888,92 @@ For the full configuration reference, see [Configuration](../documentation/confi
     }
     ```
 
-    1. Configured value consumed by the guide component.
-    2. Configured value consumed by the guide component. Optional override from `HTTP_ADVANCED_API_KEY`.
+    1.  Local default used when no environment variable is set.
+    2.  Optional override from `HTTP_ADVANCED_API_KEY`. In HOCON a default is expressed by assigning the key twice: the second assignment is skipped when the variable is absent.
 
 === ":simple-yaml: `YAML`"
 
     ```yaml title="src/main/resources/application.yaml"
     auth:
       apiKey:
-        value: ${?HTTP_ADVANCED_API_KEY:"MySecuredApiKey"} #(1)!
+        value: ${HTTP_ADVANCED_API_KEY:MySecuredApiKey} #(1)!
     ```
 
-    1. Configured value consumed by the guide component. Uses the shown default and allows `HTTP_ADVANCED_API_KEY` to override it.
+    1.  Reads `HTTP_ADVANCED_API_KEY` and falls back to the shown default. Do not write `${?VAR:default}`: with `?` the whole `VAR:default` text is treated as the reference name and the key resolves to nothing.
 
 The local default makes the guide easy to run, while the environment-variable override shows the production-friendly pattern.
+
+## Blocking and Parallel Work { #blocking-parallel }
+
+Kora HTTP handlers are synchronous, and that is a deliberate design decision rather than a limitation. Undertow dispatches every request onto a virtual thread before the generated handler calls your
+controller method, so blocking IO inside a route is normal: a JDBC query, an HTTP call to another service, or reading a file does not pin a platform thread.
+
+The processors enforce that contract at compile time:
+
+===! ":fontawesome-brands-java: `Java`"
+
+    A route that returns `CompletionStage<T>`, `Future<T>`, or a reactive `Publisher<T>` compiles, but the annotation processor reports a warning and the value is treated as an ordinary result that
+    needs its own response mapper:
+
+    ```text
+    Method return type is CompletionStage<T> which is unsupported and has no meaning
+    ```
+
+    Return the value itself instead. When one request genuinely needs two independent calls at the same time, fan out inside the handler and join before returning:
+
+    ```java
+    @HttpRoute(method = HttpMethod.GET, path = "/data/summary")
+    @Json
+    public Payload summary() throws Exception {
+        try (var executor = Executors.newVirtualThreadPerTaskExecutor()) { //(1)!
+            var first = executor.submit(() -> remoteA.load());
+            var second = executor.submit(() -> remoteB.load()); //(2)!
+            return new Payload(first.get() + " / " + second.get()); //(3)!
+        }
+    }
+    ```
+
+    1.  One short-lived executor per request; `close()` waits for the submitted tasks.
+    2.  Both calls start immediately and run on their own virtual threads.
+    3.  The handler blocks here and returns a plain value, so the route contract stays synchronous.
+
+=== ":simple-kotlin: `Kotlin`"
+
+    A `suspend` route is rejected outright by the symbol processor:
+
+    ```text
+    HTTP server controller method is invalid:
+      test
+
+    Problem:
+      Suspend methods are not supported by the HTTP server controller generator.
+
+    Fix:
+      Remove suspend from the controller method.
+    ```
+
+    Return the value itself instead. When one request genuinely needs two independent calls at the same time, fan out inside the handler and join before returning:
+
+    ```kotlin
+    @HttpRoute(method = HttpMethod.GET, path = "/data/summary")
+    @Json
+    fun summary(): Payload {
+        Executors.newVirtualThreadPerTaskExecutor().use { executor -> //(1)!
+            val first = executor.submit<String> { remoteA.load() }
+            val second = executor.submit<String> { remoteB.load() } //(2)!
+            return Payload("${first.get()} / ${second.get()}") //(3)!
+        }
+    }
+    ```
+
+    1.  One short-lived executor per request; `close()` waits for the submitted tasks.
+    2.  Both calls start immediately and run on their own virtual threads.
+    3.  The handler blocks here and returns a plain value, so the route contract stays synchronous.
+
+The same rule applies to interceptors and to `HttpServerRequestMapper` / `HttpServerResponseMapper` implementations: all of them return their result directly.
+
+The full compiler message for `suspend` also suggests structured concurrency with `StructuredTaskScope` for this fan-out, which is a preview API and needs `--enable-preview` on the JDK 25 toolchain.
+The executor above requires no preview flag, which is why the guide uses it.
 
 ## Generated Code { #generated-code }
 
@@ -905,13 +990,13 @@ inspect the generated module:
 ===! ":fontawesome-brands-java: `Java`"
 
     ```text
-    guides/guide-http-server-advanced-app/build/generated/sources/annotationProcessor/java/main/ru/tinkoff/kora/guide/httpserver/advanced/controller/DataControllerModule.java
+    build/generated/sources/annotationProcessor/java/main/io/koraframework/guide/httpserver/advanced/controller/DataControllerModule.java
     ```
 
 === ":simple-kotlin: `Kotlin`"
 
     ```text
-    guides/kotlin/guide-kotlin-http-server-advanced-app/build/generated/ksp/main/kotlin/ru/tinkoff/kora/guide/httpserver/advanced/controller/DataControllerModule.kt
+    build/generated/ksp/main/kotlin/io/koraframework/guide/httpserver/advanced/controller/DataControllerModule.kt
     ```
 
 For example, the generated handler for the form endpoint looks like this:
@@ -919,48 +1004,60 @@ For example, the generated handler for the form endpoint looks like this:
 ===! ":fontawesome-brands-java: `Java`"
 
     ```java
-    default HttpServerRequestHandler post_data_form(DataController _controller,
-        HttpServerRequestMapper<FormUrlEncoded> formBodyHttpRequestMapper,
-        HttpServerResponseMapper<String> _responseMapper,
-        BlockingRequestExecutor _executor,
-        DataApiAuthInterceptor _interceptor1) {
-      return HttpServerRequestHandlerImpl.of("POST", "/data/form", (_ctx, _request) -> {
-        try {
-          return _interceptor1.intercept(_ctx, _request, (_ctx_1, _request1) -> {
-            return _executor.execute(_ctx, () -> {
-              final FormUrlEncoded formBody = formBodyHttpRequestMapper.apply(_request1);
-              var _result = _controller.processForm(formBody);
-              return _responseMapper.apply(_ctx, _request, _result);
-            });
+    @Generated("io.koraframework.http.server.annotation.processor.ControllerModuleGenerator")
+    @Module
+    public interface DataControllerModule {
+
+      default HttpServerRequestHandler post_data_form(DataController _controller,
+          HttpServerRequestMapper<FormUrlEncoded> formBodyHttpRequestMapper,
+          HttpServerResponseMapper<String> _responseMapper,
+          DataApiAuthInterceptor _interceptor1) {
+        return HttpServerRequestHandlerImpl.of("POST", "/data/form", (_request) -> {
+          return _interceptor1.intercept(_request, (_request1) -> {
+            final FormUrlEncoded formBody;
+            try {
+              formBody = formBodyHttpRequestMapper.apply(_request1);
+            } catch (Exception _e) {
+              if (_e instanceof HttpServerResponse) throw _e;
+              throw HttpServerResponseException.of(400, _e);
+            }
+            var _result = _controller.processForm(formBody);
+            return _responseMapper.apply(_request, _result);
           });
-        } catch (Exception _e) {
-          return CompletableFuture.failedFuture(_e);
-        }
-      });
+        });
+      }
     }
     ```
 
 === ":simple-kotlin: `Kotlin`"
 
     ```kotlin
-    public fun post_data_form(
-      _controller: DataController,
-      _formBodyMapper: HttpServerRequestMapper<FormUrlEncoded>,
-      _responseMapper: HttpServerResponseMapper<String>,
-      _executor: BlockingRequestExecutor,
-    ): HttpServerRequestHandler = HttpServerRequestHandlerImpl.of("POST", "/data/form") { _ctx, _request ->
-      try {
-        _executor.execute(_ctx) {
-          val formBody = (_formBodyMapper as HttpServerRequestMapper<FormUrlEncoded?>).apply(_request)
-            ?: throw HttpServerResponseException.of(400, "Parameter formBody is not nullable, but got null from mapper")
-          val _result = _controller.processForm(formBody)
-          return@execute _responseMapper.apply(_ctx, _request, _result)
-        }
-      } catch (_e: Exception) {
-        if (_e is HttpServerResponse) {
-          CompletableFuture.failedFuture(_e)
-        } else {
-          CompletableFuture.failedFuture(HttpServerResponseException.of(400, _e))
+    @Generated("io.koraframework.http.server.symbol.procesor.HttpControllerProcessor")
+    @Module
+    public interface DataControllerModule {
+
+      public fun post_data_form(
+        _controller: DataController,
+        _formBodyMapper: HttpServerRequestMapper<FormUrlEncoded>,
+        _responseMapper: HttpServerResponseMapper<String>,
+        _interceptor1: DataApiAuthInterceptor,
+      ): HttpServerRequestHandler {
+        return HttpServerRequestHandlerImpl.of("POST", "/data/form") { _request ->
+          _interceptor1.intercept(_request) process@{ _request1 ->
+            val formBody = try {
+              (_formBodyMapper as HttpServerRequestMapper<FormUrlEncoded?>).apply(_request1)
+            } catch (_e: Exception) {
+              if (_e is HttpServerResponse) {
+                throw _e
+              }
+              throw HttpServerResponseException.of(400, _e)
+            }
+            if (formBody == null) {
+              throw HttpServerResponseException.of(400, "Parameter formBody is not nullable, but got null from mapper")
+            }
+            val _result = _controller.processForm(formBody)
+            return@process _responseMapper.apply(_request, _result)
+          }
         }
       }
     }
@@ -968,11 +1065,13 @@ For example, the generated handler for the form endpoint looks like this:
 
 This generated code is the bridge between the nice controller method and the low-level HTTP server pipeline:
 
-- `HttpServerRequestHandlerImpl.of(...)` registers the route method and path
-- `HttpServerRequestMapper<FormUrlEncoded>` reads the request body
-- `DataApiAuthInterceptor` wraps the route
-- `BlockingRequestExecutor` runs the blocking controller method safely
+- `HttpServerRequestHandlerImpl.of(...)` registers the route method and path, and the generated method name is derived from them
+- `HttpServerRequestMapper<FormUrlEncoded>` reads the request body and is injected from the graph
+- `DataApiAuthInterceptor` wraps the route, and `chain.process(request)` is the nested lambda
 - `HttpServerResponseMapper<String>` turns the return value into an HTTP response
+- a mapper failure is converted into `400` unless the exception is already an `HttpServerResponse`
+
+Notice what is *not* there: no executor hop, no `CompletableFuture`, no callback. The handler runs top to bottom on the virtual thread Undertow assigned to the request.
 
 This is a strong debugging technique for both developers and AI assistants: when route behavior is unclear, generated sources show the exact request pipeline that Kora compiled from annotations.
 
@@ -981,42 +1080,42 @@ This is a strong debugging technique for both developers and AI assistants: when
 Most application endpoints should use declarative controllers because they are easier to read and test. Kora also allows a lower-level imperative style through `HttpServerRequestHandler`, which is
 useful when you need direct control over the request pipeline or want to understand what generated controllers compile down to.
 
+`HttpServerRequestHandlerImpl` lives in `io.koraframework.http.server.common.request` and offers one factory per HTTP method (`get`, `post`, `put`, `delete`, ...) plus a generic `of(method, route,
+handler)`. The handler is a `HandlerFunction`: it takes the `HttpServerRequest` and returns an `HttpServerResponse`.
+
 Add this manual handler to `Application.java` or `Application.kt`:
 
 ===! ":fontawesome-brands-java: `Java`"
 
-    ```java title="src/main/java/ru/tinkoff/kora/guide/httpserver/advanced/Application.java"
-    package ru.tinkoff.kora.guide.httpserver.advanced;
+    ```java title="src/main/java/io/koraframework/guide/httpserver/advanced/Application.java"
+    package io.koraframework.guide.httpserver.advanced;
 
-    import java.util.concurrent.CompletableFuture;
-    import ru.tinkoff.kora.application.graph.KoraApplication;
-    import ru.tinkoff.kora.common.KoraApp;
-    import ru.tinkoff.kora.config.hocon.HoconConfigModule;
-    import ru.tinkoff.kora.guide.httpserver.advanced.controller.DataApiAuthConfig;
-    import ru.tinkoff.kora.http.common.body.HttpBody;
-    import ru.tinkoff.kora.http.server.common.HttpServerResponse;
-    import ru.tinkoff.kora.http.server.common.handler.HttpServerRequestHandler;
-    import ru.tinkoff.kora.http.server.common.handler.HttpServerRequestHandlerImpl;
-    import ru.tinkoff.kora.http.server.undertow.UndertowHttpServerModule;
-    import ru.tinkoff.kora.json.module.JsonModule;
-    import ru.tinkoff.kora.logging.logback.LogbackModule;
+    import io.koraframework.application.graph.KoraApplication;
+    import io.koraframework.common.annotation.KoraApp;
+    import io.koraframework.config.hocon.HoconConfigModule;
+    import io.koraframework.guide.httpserver.advanced.controller.DataApiAuthConfig;
+    import io.koraframework.http.common.body.HttpBody;
+    import io.koraframework.http.server.common.request.HttpServerRequestHandler;
+    import io.koraframework.http.server.common.request.HttpServerRequestHandlerImpl;
+    import io.koraframework.http.server.common.response.HttpServerResponse;
+    import io.koraframework.http.server.undertow.UndertowPublicHttpServerModule;
+    import io.koraframework.json.common.JsonModule;
+    import io.koraframework.logging.logback.LogbackModule;
 
     @KoraApp
     public interface Application extends
             HoconConfigModule,
             JsonModule,
             LogbackModule,
-            UndertowHttpServerModule {  // <----- Connected module
+            UndertowPublicHttpServerModule {  // <----- Connected module
 
         default HttpServerRequestHandler manualDataPingHandler(DataApiAuthConfig authConfig) {
-            return HttpServerRequestHandlerImpl.get("/manual/data/ping", (context, request) -> {
+            return HttpServerRequestHandlerImpl.get("/manual/data/ping", request -> {
                 var authorization = request.headers().getFirst("authorization");
                 if (!authConfig.value().equals(authorization)) {
-                    return CompletableFuture.completedFuture(
-                            HttpServerResponse.of(403, HttpBody.plaintext("Invalid API key")));
+                    return HttpServerResponse.of(403, HttpBody.plaintext("Invalid API key"));
                 }
-                return CompletableFuture.completedFuture(
-                        HttpServerResponse.of(200, HttpBody.plaintext("manual-data-pong")));
+                return HttpServerResponse.of(200, HttpBody.plaintext("manual-data-pong"));
             });
         }
 
@@ -1028,36 +1127,35 @@ Add this manual handler to `Application.java` or `Application.kt`:
 
 === ":simple-kotlin: `Kotlin`"
 
-    ```kotlin title="src/main/kotlin/ru/tinkoff/kora/guide/httpserver/advanced/Application.kt"
-    package ru.tinkoff.kora.guide.httpserver.advanced
+    ```kotlin title="src/main/kotlin/io/koraframework/guide/httpserver/advanced/Application.kt"
+    package io.koraframework.guide.httpserver.advanced
 
-    import ru.tinkoff.kora.application.graph.KoraApplication
-    import ru.tinkoff.kora.common.KoraApp
-    import ru.tinkoff.kora.config.hocon.HoconConfigModule
-    import ru.tinkoff.kora.guide.httpserver.advanced.controller.DataApiAuthConfig
-    import ru.tinkoff.kora.http.common.body.HttpBody
-    import ru.tinkoff.kora.http.server.common.HttpServerResponse
-    import ru.tinkoff.kora.http.server.common.handler.HttpServerRequestHandler
-    import ru.tinkoff.kora.http.server.common.handler.HttpServerRequestHandlerImpl
-    import ru.tinkoff.kora.http.server.undertow.UndertowHttpServerModule
-    import ru.tinkoff.kora.json.module.JsonModule
-    import ru.tinkoff.kora.logging.logback.LogbackModule
-    import java.util.concurrent.CompletableFuture
+    import io.koraframework.application.graph.KoraApplication
+    import io.koraframework.common.annotation.KoraApp
+    import io.koraframework.config.hocon.HoconConfigModule
+    import io.koraframework.guide.httpserver.advanced.controller.DataApiAuthConfig
+    import io.koraframework.http.common.body.HttpBody
+    import io.koraframework.http.server.common.request.HttpServerRequestHandler
+    import io.koraframework.http.server.common.request.HttpServerRequestHandlerImpl
+    import io.koraframework.http.server.common.response.HttpServerResponse
+    import io.koraframework.http.server.undertow.UndertowPublicHttpServerModule
+    import io.koraframework.json.common.JsonModule
+    import io.koraframework.logging.logback.LogbackModule
 
     @KoraApp
     interface Application :
         HoconConfigModule,
         JsonModule,
         LogbackModule,
-        UndertowHttpServerModule {  // <----- Connected module
+        UndertowPublicHttpServerModule {  // <----- Connected module
 
         fun manualDataPingHandler(authConfig: DataApiAuthConfig): HttpServerRequestHandler {
-            return HttpServerRequestHandlerImpl.get("/manual/data/ping") { _, request ->
+            return HttpServerRequestHandlerImpl.get("/manual/data/ping") { request ->
                 val authorization = request.headers().getFirst("authorization")
                 if (authConfig.value() != authorization) {
-                    CompletableFuture.completedFuture(HttpServerResponse.of(403, HttpBody.plaintext("Invalid API key")))
+                    HttpServerResponse.of(403, HttpBody.plaintext("Invalid API key"))
                 } else {
-                    CompletableFuture.completedFuture(HttpServerResponse.of(200, HttpBody.plaintext("manual-data-pong")))
+                    HttpServerResponse.of(200, HttpBody.plaintext("manual-data-pong"))
                 }
             }
         }
@@ -1071,30 +1169,40 @@ Add this manual handler to `Application.java` or `Application.kt`:
 The method returns a framework handler directly:
 
 - `HttpServerRequestHandlerImpl.get(...)` registers `GET /manual/data/ping`
-- the lambda receives `Context` and `HttpServerRequest`
+- the lambda receives the `HttpServerRequest` and returns an `HttpServerResponse`
 - the handler reads the `Authorization` header manually
-- the method returns `CompletionStage<HttpServerResponse>` through `CompletableFuture.completedFuture(...)`
+- because the method is declared on the `@KoraApp` interface, its result becomes a graph component, and the router picks it up through `All<HttpServerRequestHandler>`
+- global interceptors such as `ExceptionHandler` still wrap this route, because they are applied by the router and not by the generated controller module
 
-After compilation, the generated application graph wires this handler as another HTTP route:
+After compilation, the generated application graph wires this handler as another node. Component numbers depend on how many components the included modules contribute, so they will differ in your
+build:
 
 ===! ":fontawesome-brands-java: `Java`"
 
     ```java
-    component44 = graphDraw.addNode0(_type_of_component44, new Class<?>[]{}, g -> impl.manualDataPingHandler(
+    component44 = graphDraw.addNode(_type_of_component44,
+        null,
+        null,
+        List.of(component29),
+        List.of(component29),
+        List.of(),
+        g -> impl.manualDataPingHandler(
           g.get(ApplicationGraph.holder0.component29)
-        ), List.of(), component29);
+        ));
     ```
 
 === ":simple-kotlin: `Kotlin`"
 
     ```kotlin
-    component28 = graphDraw.addNode0(map["component28"],
-      arrayOf(),
+    component28 = graphDraw.addNode(map["component28"],
+      null,
+      null,
+      listOf(component27),
+      listOf(component27),
+      listOf(),
       { impl.manualDataPingHandler(
         it.get(holder0.component27)
-      ) },
-      listOf(),
-      component27
+      ) }
     )
     ```
 
@@ -1135,7 +1243,15 @@ curl http://localhost:8080/manual/data/ping \
   -H "Authorization: MySecuredApiKey"
 ```
 
-If the `Authorization` header is missing or wrong, the route should return `403` with the shared `ErrorResponse` body.
+If the `Authorization` header is missing or wrong, the route should return `403` with the shared `ErrorResponse` body. The restricted form name produces the same shape with `400`:
+
+```bash
+curl -X POST http://localhost:8080/data/form \
+  -H "Authorization: MySecuredApiKey" \
+  -H "Content-Type: application/x-www-form-urlencoded" \
+  -d "name=admin"
+# Expected output: {"message":"Form name 'admin' is restricted"}
+```
 
 ## Best Practices { #best-practices }
 
@@ -1143,7 +1259,8 @@ If the `Authorization` header is missing or wrong, the route should return `403`
 - Use `HttpServerRequestMapper` when several request values belong to one typed concept.
 - Keep transport-specific routes in a separate controller so business controllers stay focused.
 - Prefer controller-level interceptors before making behavior global.
-- Use a global interceptor only for behavior that truly should affect the whole HTTP server.
+- Use a global interceptor only for behavior that truly should affect the whole HTTP server, and always tag it with `@Tag(HttpServer.class)`.
+- Cover a global interceptor with a test: a wrong tag compiles cleanly and silently disables it.
 - Use imperative `HttpServerRequestHandler` sparingly, when direct request/response control is clearer than annotations.
 - Put simple secrets behind environment-variable overrides even in guide applications.
 
@@ -1164,9 +1281,10 @@ You extended the basic Kora HTTP server with:
 - custom request mapping with `HttpServerRequestMapper` and `@Mapping`
 - additional body formats with `FormUrlEncoded` and `FormMultipart`
 - controller-level interceptors with `@InterceptWith`
-- global interceptors with `@Tag(HttpServerModule.class)`
+- global interceptors with `@Tag(HttpServer.class)`
 - simple header-based authorization through an interceptor and configuration
 - imperative route registration with `HttpServerRequestHandlerImpl`
+- why controller methods, interceptors, and mappers are all synchronous, and how to still run work in parallel
 
 ## Troubleshooting { #troubleshooting }
 
@@ -1174,6 +1292,10 @@ You extended the basic Kora HTTP server with:
 
 - Check that the parameter is annotated with `@Mapping(...)`.
 - Make sure the mapper implements `HttpServerRequestMapper<T>`.
+
+**Compilation fails with `No component found for dependency` naming the mapper or interceptor:**
+
+- A class referenced from `@Mapping` or `@InterceptWith` is resolved from the graph, never constructed by the generated module. Add `@Component` to it.
 
 **Multipart request does not work:**
 
@@ -1187,7 +1309,7 @@ You extended the basic Kora HTTP server with:
 
 **Global exception handler does not run:**
 
-- Check `@Tag(HttpServerModule.class)` on the interceptor.
+- Check `@Tag(HttpServer.class)` on the interceptor. Any other tag compiles but is never collected by the router.
 - Make sure the class is also annotated with `@Component`.
 
 **Protected DataController routes return 403:**
@@ -1195,6 +1317,14 @@ You extended the basic Kora HTTP server with:
 - Check the `Authorization` header value.
 - Make sure it matches `auth.apiKey.value`.
 - If you use `HTTP_ADVANCED_API_KEY`, remember that it overrides the local default.
+
+**The YAML API key resolves to nothing:**
+
+- `${?VAR:default}` is not a valid combination: with `?` the whole `VAR:default` text becomes the reference name. Use `${VAR:default}`.
+
+**Kotlin build fails with `Suspend methods are not supported by the HTTP server controller generator`:**
+
+- Remove `suspend` from the controller method and return the value directly.
 
 ## What's Next? { #whats-next }
 
@@ -1208,7 +1338,7 @@ You extended the basic Kora HTTP server with:
 
 If you get stuck:
 
-- compare with [Kora Java HTTP Server Advanced App](https://github.com/kora-projects/kora-examples/tree/master/guides/java/kora-java-guide-http-server-advanced-app) and [Kora Kotlin HTTP Server Advanced App](https://github.com/kora-projects/kora-examples/tree/master/guides/kotlin/kora-kotlin-http-server-advanced-app)
+- compare with [Kora Java HTTP Server Advanced App](https://github.com/kora-projects/kora-examples/tree/master/guides/java/kora-java-guide-http-server-advanced-app) and [Kora Kotlin HTTP Server Advanced App](https://github.com/kora-projects/kora-examples/tree/master/guides/kotlin/kora-kotlin-guide-http-server-advanced-app)
 - revisit [HTTP Server](http-server.md) for the base controller-service-repository flow
 - check the [HTTP Server documentation](../documentation/http-server.md)
 - check the [Container documentation](../documentation/container.md)
